appId: ${MAESTRO_APP_ID}
---
- tapOn:
    id: e2e-login-email
    waitToSettleTimeoutMs: 500
- inputText: ${EMAIL}
- tapOn:
    id: e2e-login-password
    waitToSettleTimeoutMs: 500
- inputText: ${PASSWORD}
- hideKeyboard
- tapOn:
    id: e2e-login-submit
    waitToSettleTimeoutMs: 500
- extendedWaitUntil:
    visible:
      id: e2e-home-root
    timeout: 30000
